syntax = "proto3";

package openagents.hydra.v1;

import "google/protobuf/struct.proto";

// Hydra routing contracts for MVP-2 runtime commerce lanes.
//
// These wire messages back deterministic, receipted route scoring across
// runtime authority and neobank consumers. JSON payloads are interoperability
// views; proto remains the contract authority (ADR-0002 / INV-01).

enum HydraRoutingErrorCode {
  HYDRA_ROUTING_ERROR_CODE_UNSPECIFIED = 0;
  HYDRA_ROUTING_ERROR_CODE_INVALID_REQUEST = 1;
  HYDRA_ROUTING_ERROR_CODE_NOT_FOUND = 2;
  HYDRA_ROUTING_ERROR_CODE_CONFLICT = 3;
  HYDRA_ROUTING_ERROR_CODE_DEPENDENCY_UNAVAILABLE = 4;
  HYDRA_ROUTING_ERROR_CODE_INTERNAL_ERROR = 5;
}

message HydraRoutingError {
  HydraRoutingErrorCode code = 1;
  string message = 2;
  bool retryable = 3;
  google.protobuf.Struct details = 4;
}

message RoutingCandidateQuoteV1 {
  string marketplace_id = 1;
  string provider_id = 2;
  optional string provider_worker_id = 3;
  uint64 total_price_msats = 4;
  optional uint64 latency_ms = 5;
  uint32 reliability_bps = 6;
  google.protobuf.Struct constraints = 7;
  optional string quote_id = 8;
  optional string quote_sha256 = 9;
}

message RoutingScoreRequestV1 {
  string schema = 1;
  string idempotency_key = 2;
  string run_id = 3;
  string marketplace_id = 4;
  string capability = 5;
  string policy = 6;
  optional string objective_hash = 7;
  uint64 decided_at_unix = 8;
  repeated RoutingCandidateQuoteV1 candidates = 9;
}

message RoutingDecisionFactorsV1 {
  uint64 expected_fee_msats = 1;
  double confidence = 2;
  double liquidity_score = 3;
  repeated string policy_notes = 4;
}

message RoutingDecisionReceiptLinkageV1 {
  string receipt_schema = 1;
  string receipt_id = 2;
  string canonical_json_sha256 = 3;
}

message RoutingScoreResponseV1 {
  string schema = 1;
  string decision_sha256 = 2;
  string policy = 3;
  string run_id = 4;
  string marketplace_id = 5;
  string capability = 6;
  optional string objective_hash = 7;
  RoutingCandidateQuoteV1 selected = 8;
  repeated RoutingCandidateQuoteV1 candidates = 9;
  RoutingDecisionFactorsV1 factors = 10;
  RoutingDecisionReceiptLinkageV1 receipt = 11;
  google.protobuf.Struct nostr_event = 12;
  uint64 decided_at_unix = 13;
}
